# BigDecimal

./: CMakeLists.txt  Makefile  big_decimal.cpp  big_decimal.h  test.cpp
Expression/: CMakeLists.txt  Expression.h  Parser.h  Token.cpp  Token.h  main.cpp
Expression/tests/: test_eval.cpp  test_input.cpp  test_of_differential.cpp
